[gd_scene load_steps=28 format=3 uid="uid://bqmtopw2ueq7t"]

[ext_resource type="Script" uid="uid://b68xxrgennr6k" path="res://Enemies/slime.gd" id="1_v0fv8"]
[ext_resource type="Resource" uid="uid://dyp6a44reo3ea" path="res://Stats/slime_stats.tres" id="2_mky3p"]
[ext_resource type="PackedScene" uid="uid://hakdr4fdj1fo" path="res://Combat/health_component.tscn" id="3_aq8il"]
[ext_resource type="PackedScene" uid="uid://hfj2qrgqwdms" path="res://Enemies/wander_controller.tscn" id="4_l26av"]
[ext_resource type="PackedScene" uid="uid://gh2hmf87o2ox" path="res://Enemies/sword_slow_controller.tscn" id="5_tm1u2"]
[ext_resource type="Shader" uid="uid://cd25tciedu4h5" path="res://Combat/ShaderComplementary.gdshader" id="6_837lf"]
[ext_resource type="Texture2D" uid="uid://cssrlgmkjn6yr" path="res://Enemies/Sprites/slime.png" id="7_mky3p"]
[ext_resource type="PackedScene" uid="uid://6c21m1l8r268" path="res://Combat/hurtbox.tscn" id="8_3t86m"]
[ext_resource type="PackedScene" uid="uid://cfur0wgencjh8" path="res://Enemies/player_detection_zone.tscn" id="9_wgl02"]
[ext_resource type="PackedScene" uid="uid://lfrhnehwb41h" path="res://Combat/hitbox.tscn" id="10_jiijo"]
[ext_resource type="PackedScene" uid="uid://3od7ps120wrn" path="res://Enemies/soft_collision.tscn" id="11_o4ycw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4od23"]
resource_local_to_scene = true
shader = ExtResource("6_837lf")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_kqei6"]
atlas = ExtResource("7_mky3p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq8il"]
atlas = ExtResource("7_mky3p")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l26av"]
atlas = ExtResource("7_mky3p")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm1u2"]
atlas = ExtResource("7_mky3p")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_837lf"]
atlas = ExtResource("7_mky3p")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w61c4"]
atlas = ExtResource("7_mky3p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7n145"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqei6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq8il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l26av")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm1u2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_837lf")
}],
"loop": false,
"name": &"Start",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w61c4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0fgnr"]
radius = 4.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_loe2b"]
size = Vector2(12.5, 13.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_qxvdp"]
radius = 81.0247

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lh42r"]
size = Vector2(8, 10)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tt0oc"]
radius = 4.0
height = 12.0

[sub_resource type="Animation" id="Animation_eeofm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2qxec"]
resource_name = "Start"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ce8b3"]
_data = {
&"RESET": SubResource("Animation_eeofm"),
&"Start": SubResource("Animation_2qxec")
}

[node name="Slime" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 16
script = ExtResource("1_v0fv8")
stats = ExtResource("2_mky3p")
metadata/_edit_group_ = true

[node name="Health_Component" parent="." instance=ExtResource("3_aq8il")]

[node name="WanderController" parent="." instance=ExtResource("4_l26av")]
wander_range = 64

[node name="SwordSlowController" parent="." instance=ExtResource("5_tm1u2")]

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_4od23")
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_7n145")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0fgnr")

[node name="Hurtbox" parent="." instance=ExtResource("8_3t86m")]
visible = false
position = Vector2(0, -2)
collision_layer = 8
collision_mask = 64

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(-0.25, 0.25)
shape = SubResource("RectangleShape2D_loe2b")

[node name="PlayerDetectionZone" parent="." instance=ExtResource("9_wgl02")]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2(-1, -2)
shape = SubResource("CircleShape2D_qxvdp")
debug_color = Color(0, 0.6, 0.701961, 0.121569)

[node name="Hitbox" parent="." instance=ExtResource("10_jiijo")]
visible = false
position = Vector2(0, -3)
collision_layer = 128
collision_mask = 260

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_lh42r")

[node name="SoftCollision" parent="." instance=ExtResource("11_o4ycw")]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tt0oc")

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ce8b3")
}

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animated_sprite_animation_finished"]
[connection signal="trigger_knockback" from="Hurtbox" to="." method="_on_hurtbox_trigger_knockback"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
